--- a/src/app/admin/features/operator_Login/Dialog/lco-dashboard/lco-dashboard.component.html
+++ b/src/app/admin/features/operator_Login/Dialog/lco-dashboard/lco-dashboard.component.html
@@ -60,8 +60,8 @@
             <div class="col-12 col-md-3  mb-2">
                 <mat-form-field class="w-100" appearance="outline">
                     <mat-label>Select CartonBox</mat-label>
-                    <mat-select [formControl]="toppings" multiple [(ngModel)]="cortonBox"
-                        (selectionChange)="onCortonBoxChange($event.value)">
+                    <mat-select [formControl]="toppings" [(ngModel)]="cortonBox" multiple
+                        (selectionChange)="getCortonboxFiltered($event)">
                         <mat-option *ngFor="let box of cortonBoxList" [value]="box">
                             {{ box }}
                         </mat-option>
@@ -73,7 +73,7 @@
                     Submit
                 </button>
             </div>
-       
+
             <div class="col-12 col-md-4 d-flex justify-content-end align-items-center mb-2 ml-auto"
                 style="margin-top: -1%;">
                 <button type="submit" (click)="openDialoguePage('lco_inventory')" class="btn bttn"
@@ -87,7 +87,7 @@
                     [disabled]="!isAnyRowSelected" style="background-color:#577266">
                     ALLOCATED
                 </button>
-            </div> -->
+            </div> -->`
         </div>
         <ag-grid-angular #agGrid id="myGrid" domLayout='normal' class="ag-theme-alpine table-class" rowAnimation
             [rowSelection]="rowSelection" [gridOptions]="gridOptions" [columnDefs]="columnDefs" [rowData]="rowData"
@@ -122,7 +122,14 @@
             <div class="col-12 col-md-3  mb-2">
                 <mat-form-field class="w-100" appearance="outline">
                     <mat-label>Select CartonBox</mat-label>
-                    <mat-select [formControl]="toppings" multiple [(ngModel)]="cortonBox">
+                    <!-- <mat-select [formControl]="toppings" multiple [(ngModel)]="cortonBox">
+                        <mat-option *ngFor="let box of cortonBoxList" [value]="box"
+                            (onSelectionChange)="getCortonboxFiltered(box)">
+                            {{ box }}
+                        </mat-option>
+                    </mat-select> -->
+                     <mat-select [formControl]="toppings" [(ngModel)]="cortonBox" multiple
+                        (selectionChange)="getCortonboxFiltered($event)">
                         <mat-option *ngFor="let box of cortonBoxList" [value]="box">
                             {{ box }}
                         </mat-option>
