--- a/src/app/admin/features/channel_setting/_Dialogue/LCO-Commission/edit-dismembership/edit-dismembership.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/LCO-Commission/edit-dismembership/edit-dismembership.component.html
@@ -6,14 +6,14 @@
 <section>
     <div class="col-12 col-12 mb-3 d-flex justify-content-center align-items-center ">
         <div style="padding: 0.5rem;">
-            <h6 style="text-align: center;font-weight: bold;"> <span style="color: #09080a;font-size: 17px;
+            <h6 style="text-align: center;font-weight: bold;color: #dd05a7;"> <span style="color: #09080a;font-size: 17px;
     font-weight: bold;">SUBMSO :</span>
                 {{distributor}}-{{distributorid}}</h6>
         </div>
     </div>
     <div class="d-flex flex-column flex-lg-row justify-content-center align-items-center mobile">
 
-        <div class="col-lg-5 col-12 mb-3 mb-lg-0">
+        <div class="col-lg-5 col-12 mb-3 mb-lg-0">  
             <div class="card">
                 <div class="input_box">
                     <input type="text" placeholder="Search" [(ngModel)]="searchTermAvailable"
