--- a/src/app/admin/features/nav/nav.component.html
+++ b/src/app/admin/features/nav/nav.component.html
@@ -95,20 +95,16 @@
                         (click)="navgetToUrl('/lco_recharge/1');setActiveLinkTab($event)">
                         <i class='fa fa-fw fa-users  icon'></i> &nbsp;
                         Operator Details</a></li>
-
-
                 <li *ngIf="username !== 'manikandan' && navigationList.lcorecharge"><a
                         (click)="navgetToUrl('/lco_recharge/2');setActiveLinkTab($event)"><i
                             class='fa-solid fa-indian-rupee-sign icon'></i> &nbsp;LCO Recharge</a></li>
                 <li *ngIf="username == 'manikandan' && navigationList.lcorecharge"><a
                         (click)="navgetToUrl('/lcorecharge/1');setActiveLinkTab($event)"><i
                             class='fa-solid fa-indian-rupee-sign icon'></i> &nbsp;LCO Recharge</a></li>
-
-
-                <li *ngIf=" username !== 'manikandan' && navigationList.lcorecharge"><a
+                <li *ngIf="!isReception && username !== 'manikandan' && navigationList.lcorecharge"><a
                         (click)="navgetToUrl('/lco_recharge/3');setActiveLinkTab($event)"><i
                             class='fa fa-fw fa-circle-o icon'></i> &nbsp;Admin Recharge</a></li>
-                <li *ngIf=" username == 'manikandan' && navigationList.lcorecharge"><a
+                <li *ngIf="!isReception &&username == 'manikandan' && navigationList.lcorecharge"><a
                         (click)="navgetToUrl('/lcorecharge/2');setActiveLinkTab($event)"><i
                             class='fa fa-fw fa-circle-o icon'></i> &nbsp;Admin Recharge</a></li>
             </ul>
@@ -117,7 +113,6 @@
         <li *ngIf="isUser || isReception ">
             <a>
                 <i class="bx bx-user-pin bx-sm icon "></i>
-
                 Subscriber <i class='bx bx-chevron-right icon-right'></i></a>
             <ul class="side-dropdown">
                 <li *ngIf="navigationList.createsubscriber"><a
@@ -156,7 +151,7 @@
                             class="fa fa-fw fa-comments icon">&nbsp;</i> Mail </a></li>
             </ul>
         </li>
-        <li *ngIf="isUser  ">
+        <li *ngIf="isUser">
             <a> <mat-icon class="icon">personal_video</mat-icon> Channel Setting <i
                     class='bx bx-chevron-right icon-right'></i></a>
             <ul class="side-dropdown">
@@ -187,10 +182,11 @@
                         (click)="navgetToUrl('/PackageReference');setActiveLinkTab($event)"><i
                             class="fa-regular fa-snowflake icon ">&nbsp;</i>Package Reference</a></li>
                 <li *ngIf="navigationList.packagemaster"><a (click)="navgetToUrl('/PackageMaster')"
-                        (click)="setActiveLinkTab($event)"><i class="fa fa-fw fa-cubes icon ">&nbsp;</i>Package Master </a></li>
+                        (click)="setActiveLinkTab($event)"><i class="fa fa-fw fa-cubes icon ">&nbsp;</i>Package Master
+                    </a></li>
                 <li *ngIf="username == 'manikandan' && navigationList.lcocommission"><a
                         (click)="navgetToUrl('/LcoCommission');setActiveLinkTab($event)"><i
-                            class="fa fa-fw fa-th-large icon ">&nbsp;</i>Lco  Commission </a></li>
+                            class="fa fa-fw fa-th-large icon ">&nbsp;</i>Lco Commission </a></li>
                 <li *ngIf="username !== 'manikandan' && navigationList.lcocommission"><a
                         (click)="navgetToUrl('/LcoCommission_credential');setActiveLinkTab($event)"><i
                             class="fa fa-fw fa-th-large icon ">&nbsp;</i>Lco Commission </a></li>
@@ -315,8 +311,7 @@
                 </li>
                 <li *ngIf="navigationList.msoreports"><a
                         (click)="navgetToUrl('/msoReports');setActiveLinkTab($event)"><i
-                            class="fa fa-fw fa-qq icon">&nbsp;</i>MSO
-                        Reports </a> </li>
+                            class="fa fa-fw fa-qq icon">&nbsp;</i>MSO Reports </a> </li>
                 <!-- <li><a (click)="navgetToUrl('/historyReports');setActiveLinkTab($event)"><i
                             class="fa fa-fw fa-star icon">&nbsp;</i> HISTORY Reports</a></li> -->
             </ul>
@@ -491,8 +486,6 @@
             </ul>
         </li>
 
-
-
         <li *ngIf="isOperator"><a (click)="navgetToUrl('/forcemessage');setActiveLinkTab($event)" class="nav-link">
                 <i class="bx bx-label bx-sm icon "></i> &nbsp;Message</a></li>
         <li *ngIf="isOperator || isSubLco && SublcoReport"><a
@@ -556,7 +549,6 @@
             <ul class="side-dropdown">
                 <li><a (click)="navgetToUrl('/not_allacate_smartcard');setActiveLinkTab($event)"><i
                             class="fa fa-fw fa-upload icon ">&nbsp;</i>Not Allocated Smartcard </a> </li>
-
                 <li><a (click)="navgetToUrl('/allocate_smartcard');setActiveLinkTab($event)"><i
                             class="fa fa-fw fa-gear icon ">&nbsp;</i>Allocated smartcard </a> </li>
 
@@ -631,8 +623,11 @@
                             </div>
                         </div>
                         <!-- <a (click)="startListening('/voice')">🎙️ </a> -->
-                          <a id="start-btn">🎙️</a>
-                        
+
+                        <a id="start-btn" style="display: none;"><i class="fas fa-microphone"></i></a>
+                        <a id="stop-btn"><i class="fas fa-microphone-slash"></i></a>
+
+
                     </div>
 
                     <div class="d-block">
